# ConsoleEngine

./: CMakeLists.txt  Chars.h  Colors.h  ConsoleEngine.cpp  ConsoleEngine.h  MainTest.cpp  README.md  Rect.h  Sprite.cpp  Sprite.h
sprites/: brick.con
src/: ConsoleEngine.cpp  MainTest.cpp  Sprite.cpp
src/include/: Chars.h  Colors.h  ConsoleEngine.h  Rect.h  Sprite.h
